--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,18 @@
 #map_div {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     background-color: black;
 }
+
+.map_parent{
+   background-color: #242728;
+}
+
+#header {
+    padding: 0px;
+}
+
+
 /*
     DEMO STYLE
 */
@@ -29,21 +39,6 @@ a:focus {
     transition: all 0.3s;
 }
 
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
 .line {
     width: 100%;
     height: 1px;
@@ -68,7 +63,7 @@ span {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background: #272b33;
     color: #fff;
     transition: all 0.3s;
 }
@@ -119,8 +114,8 @@ span {
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
+    padding: 10px;
+    background: #272b33;
 }
 
 #sidebar .sidebar-header strong {
@@ -130,7 +125,6 @@ span {
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
 }
 
 #sidebar ul li a {
@@ -140,7 +134,7 @@ span {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color:#272b33;
     background: #fff;
 }
 
@@ -151,7 +145,7 @@ span {
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: #636a7a;
 }
 
 a[data-toggle="collapse"] {
@@ -248,6 +242,3 @@ ul.CTAs a {
     }
 }
 
-/*.link-list{
-    
-}
