--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,12 @@
 #map_div {
   width: 100%;
   height: 100%;
-  background-color: black;
-  border: 5px solid grey;
+  background-color: rgb(0, 0, 0);
+  border: 5px solid rgb(128, 128, 128);
 }
 
 .bg {
-  background-color: #242728;
+  background-color: rgb(36, 39, 40);
 }
 
 #header {
@@ -18,7 +18,7 @@
     color: grey;
 }
 
-#home_header{
+.header{
   color: lightgray;
   font-family: "Poppins", sans-serif;
   font-size: 2em;
@@ -30,16 +30,11 @@
     color: lightgray;
 }
 
-#credit_header{
-    font-family: "Poppins", sans-serif;
-    font-size: 2em;
-    color: lightgray;
-}
 
 .credit {
     font-family: "Poppins", sans-serif;
     font-size: 1.3em;
-    color: lightgray;
+    color: rgb(155, 155, 155);
     padding-left: 20px;
 }
 
@@ -63,7 +58,7 @@ p {
 a,
 a:hover,
 a:focus {
-  color: inherit;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   transition: all 0.3s;
 }
